[package]
name = "artemis"
version = "0.0.1"
authors = ["adumbidiot <nathaniel.daniel23@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1"
toml = "0.5"
serde = { version = "1", features = [ "derive" ]}
clap = "2"